--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^6.14.2",
     "tailwindcss": "^3.3.3"
   }
 }
