--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@tanstack/react-query": "^4.32.0",
+    "axios": "^1.4.0",
     "react-router-dom": "^6.14.2",
     "tailwindcss": "^3.3.3"
   }
