--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@hookform/resolvers": "^3.1.1",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
+    "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "yup": "^1.2.0"
   }
 }
