--- a/package.json
+++ b/package.json
@@ -39,10 +39,15 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@hookform/resolvers": "^3.1.1",
     "@tanstack/react-query": "^4.32.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
     "yup": "^1.2.0"
   }
 }
